--- a/package.json
+++ b/package.json
@@ -73,8 +73,11 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.11",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.5.4",
     "vite": "^7.3.1"
   }
